deployments/immich/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: immich-database
  labels:
    app: immich-database
spec:
  type: ClusterIP
  selector:
    app: immich-database
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: 5432


---
kind: Service
apiVersion: v1
metadata:
  name: immich-machine-learning
  labels:
    app: immich-machine-learning
spec:
  type: ClusterIP
  selector:
    app: immich-machine-learning
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP


---
kind: Service
apiVersion: v1
metadata:
  name: immich-server
  labels:
    app: immich-server
spec:
  type: ClusterIP
  selector:
    app: immich-server
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
